import type { OutputAsset, RollupOutput } from 'rollup'
import type { Options } from './../src/types'
import { resolve } from 'node:path'
import { format } from 'prettier'
import { build, type InlineConfig } from 'vite'
import { describe, expect, it } from 'vitest'
import UnpluginInjectPreload from './../src/vite'
import configs from './fixtures/configs'

async function buildVite(pluginConfig: Options, config: InlineConfig = {}) {
  const { output } = (await build({
    root: resolve(__dirname, './fixtures/vitejs'),
    plugins: [UnpluginInjectPreload(pluginConfig)],
    ...config,
  })) as RollupOutput

  const { source: indexSource } = output.find(
    item => item.fileName === 'index.html',
  ) as OutputAsset

  return await format(indexSource.toString(), { parser: 'html' })
}

describe('expect vitejs', () => {
  for (const key in configs) {
    if (Object.prototype.hasOwnProperty.call(configs, key)) {
      const config = configs[key]
      it(`test ${key}`, async () => {
        const output = await buildVite(config)
        expect(output).toMatchSnapshot()
      })

      it(`test ${key} with basePath`, async () => {
        const output = await buildVite(config, { base: '/base' })
        expect(output).toMatchSnapshot()
      })

      // @see https://github.com/Applelo/unplugin-inject-preload/issues/9
      it(`test ${key} with relative basePath `, async () => {
        const output = await buildVite(config, { base: './' })
        expect(output).toMatchSnapshot()
      })

      it(`test ${key} with URL basePath `, async () => {
        const output = await buildVite(config, { base: 'https://github.com/' })
        expect(output).toMatchSnapshot()
      })
    }
  }
})
