// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expect vitejs > test auto 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="/assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-54q__B5J.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BiFIiA68.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test auto with URL basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="https://github.com/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="https://github.com/assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="https://github.com/assets/index-DE8BS7y4.js"
    ></script>
    <link
      rel="stylesheet"
      crossorigin
      href="https://github.com/assets/index-Cr2shV7f.css"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test auto with basePath 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="/base/assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-BG-dUhdX.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-Cldl4F7h.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test auto with relative basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="./assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="./assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="./assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="./assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="./assets/index-CWlkEjfg.js"></script>
    <link rel="stylesheet" crossorigin href="./assets/index-CwI6T9-l.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customAttributes 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-54q__B5J.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BiFIiA68.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customAttributes with URL basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />
    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="https://github.com/assets/index-DE8BS7y4.js"
    ></script>
    <link
      rel="stylesheet"
      crossorigin
      href="https://github.com/assets/index-Cr2shV7f.css"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customAttributes with basePath 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-BG-dUhdX.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-Cldl4F7h.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customAttributes with relative basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="./assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />
    <link
      rel="preload"
      href="./assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      crossorigin="anonymous"
      data-font="Roboto"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="./assets/index-CWlkEjfg.js"></script>
    <link rel="stylesheet" crossorigin href="./assets/index-CwI6T9-l.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customPosition 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>

    <link
      rel="preload"
      href="/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="/assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />

    <script type="module" crossorigin src="/assets/index-54q__B5J.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BiFIiA68.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customPosition with URL basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>

    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="https://github.com/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="https://github.com/assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />

    <script
      type="module"
      crossorigin
      src="https://github.com/assets/index-DE8BS7y4.js"
    ></script>
    <link
      rel="stylesheet"
      crossorigin
      href="https://github.com/assets/index-Cr2shV7f.css"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customPosition with basePath 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>

    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="/base/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="/base/assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />

    <script
      type="module"
      crossorigin
      src="/base/assets/index-BG-dUhdX.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-Cldl4F7h.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test customPosition with relative basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>

    <link
      rel="preload"
      href="./assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="./assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
      data-vite-plugin-inject-preload
    />
    <link
      rel="preload"
      href="./assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="./assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />

    <script type="module" crossorigin src="./assets/index-CWlkEjfg.js"></script>
    <link rel="stylesheet" crossorigin href="./assets/index-CwI6T9-l.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test entryMatch 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-54q__B5J.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BiFIiA68.css" />
    <link
      rel="preload"
      href="/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test entryMatch with URL basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="https://github.com/assets/index-DE8BS7y4.js"
    ></script>
    <link
      rel="stylesheet"
      crossorigin
      href="https://github.com/assets/index-Cr2shV7f.css"
    />
    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test entryMatch with basePath 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-BG-dUhdX.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-Cldl4F7h.css" />
    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test entryMatch with relative basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="./assets/index-CWlkEjfg.js"></script>
    <link rel="stylesheet" crossorigin href="./assets/index-CwI6T9-l.css" />
    <link
      rel="preload"
      href="./assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="./assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test injectBottom 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-54q__B5J.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BiFIiA68.css" />
    <link
      rel="preload"
      href="/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="/assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test injectBottom with URL basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="https://github.com/assets/index-DE8BS7y4.js"
    ></script>
    <link
      rel="stylesheet"
      crossorigin
      href="https://github.com/assets/index-Cr2shV7f.css"
    />
    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="https://github.com/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="https://github.com/assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test injectBottom with basePath 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-BG-dUhdX.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-Cldl4F7h.css" />
    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="/base/assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test injectBottom with relative basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="./assets/index-CWlkEjfg.js"></script>
    <link rel="stylesheet" crossorigin href="./assets/index-CwI6T9-l.css" />
    <link
      rel="preload"
      href="./assets/Roboto-Italic-C4aLNNPR.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="./assets/Roboto-Regular-ZlapIrEx.woff2"
      type="font/woff2"
      as="font"
    />
    <link
      rel="preload"
      href="./assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />
    <link
      rel="preload"
      href="./assets/lazy-dSX34uAD.css"
      type="text/css"
      as="style"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test modulepreload 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="modulepreload"
      href="/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-54q__B5J.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BiFIiA68.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test modulepreload with URL basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="modulepreload"
      href="https://github.com/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="https://github.com/assets/index-DE8BS7y4.js"
    ></script>
    <link
      rel="stylesheet"
      crossorigin
      href="https://github.com/assets/index-Cr2shV7f.css"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test modulepreload with basePath 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="modulepreload"
      href="/base/assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-BG-dUhdX.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-Cldl4F7h.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test modulepreload with relative basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="modulepreload"
      href="./assets/lazy-cU9JDMt6.js"
      type="application/javascript"
      as="script"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="./assets/index-CWlkEjfg.js"></script>
    <link rel="stylesheet" crossorigin href="./assets/index-CwI6T9-l.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noMatch 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-54q__B5J.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BiFIiA68.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noMatch with URL basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="https://github.com/assets/index-DE8BS7y4.js"
    ></script>
    <link
      rel="stylesheet"
      crossorigin
      href="https://github.com/assets/index-Cr2shV7f.css"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noMatch with basePath 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-BG-dUhdX.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-Cldl4F7h.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noMatch with relative basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="./assets/index-CWlkEjfg.js"></script>
    <link rel="stylesheet" crossorigin href="./assets/index-CwI6T9-l.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noType 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link rel="preload" href="/assets/Roboto-Italic-C4aLNNPR.woff2" as="font" />
    <link
      rel="preload"
      href="/assets/Roboto-Regular-ZlapIrEx.woff2"
      as="font"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-54q__B5J.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BiFIiA68.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noType with URL basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Italic-C4aLNNPR.woff2"
      as="font"
    />
    <link
      rel="preload"
      href="https://github.com/assets/Roboto-Regular-ZlapIrEx.woff2"
      as="font"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="https://github.com/assets/index-DE8BS7y4.js"
    ></script>
    <link
      rel="stylesheet"
      crossorigin
      href="https://github.com/assets/index-Cr2shV7f.css"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noType with basePath 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="/base/assets/Roboto-Italic-C4aLNNPR.woff2"
      as="font"
    />
    <link
      rel="preload"
      href="/base/assets/Roboto-Regular-ZlapIrEx.woff2"
      as="font"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-BG-dUhdX.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-Cldl4F7h.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test noType with relative basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link
      rel="preload"
      href="./assets/Roboto-Italic-C4aLNNPR.woff2"
      as="font"
    />
    <link
      rel="preload"
      href="./assets/Roboto-Regular-ZlapIrEx.woff2"
      as="font"
    />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="./assets/index-CWlkEjfg.js"></script>
    <link rel="stylesheet" crossorigin href="./assets/index-CwI6T9-l.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test wrongAttributes 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="/assets/index-54q__B5J.js"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-BiFIiA68.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test wrongAttributes with URL basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="https://github.com/assets/index-DE8BS7y4.js"
    ></script>
    <link
      rel="stylesheet"
      crossorigin
      href="https://github.com/assets/index-Cr2shV7f.css"
    />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test wrongAttributes with basePath 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script
      type="module"
      crossorigin
      src="/base/assets/index-BG-dUhdX.js"
    ></script>
    <link rel="stylesheet" crossorigin href="/base/assets/index-Cldl4F7h.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;

exports[`expect vitejs > test wrongAttributes with relative basePath  1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />
    <link rel="preload" href="./yolo.woff2" type="font/woff2" as="font" />

    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <title>Unplugin Inject Preload</title>
    <!--__unplugin-inject-preload__-->
    <script type="module" crossorigin src="./assets/index-CWlkEjfg.js"></script>
    <link rel="stylesheet" crossorigin href="./assets/index-CwI6T9-l.css" />
  </head>
  <body>
    <h1>Unplugin Inject Preload</h1>
  </body>
</html>
"
`;
